--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -8,7 +8,12 @@ body {
     background-color: aquamarine;
 }
 
+.wrapper {
+    width: 100%;
+}
+
 .container {
+    max-width: 80rem;
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -79,9 +84,18 @@ body {
 }
 
 .control {
-    height: 1.5rem;
-    width: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+}
 
+.control div {
+    height: 2rem;
+    width: 2rem;
+    display: block;
     border-radius: 50%;
     border: 0.25rem solid rgb(78, 60, 60);
 
@@ -89,15 +103,10 @@ body {
     transition: all 0.3s ease;
 }
 
-.control:hover {
+.control div:hover {
     background-color: rgb(78, 60, 60);
-}
-
-.control div {
-    display: block;
-    width: 170%;
-    height: 170%;
-    cursor: pointer;
+    height: 1.5rem;
+    width: 1.5rem;
 }
 
 /* SLIDER EFFECT IMAGES */
@@ -171,6 +180,12 @@ body {
 #btn4:checked ~ .container2 #control4:hover {
     background-color: wheat;
     border-color: wheat;
+}
+
+@media only screen and (max-width: 500px) {
+    .captions p {
+        font-size: 1.5rem;
+    }
 }
 
 @media only screen and (max-width: 390px) {
